--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Watch videos with your friends",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon --watch 'src/**/*.js' --exec node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {},
   "devDependencies": {
     "express": "^4.17.1",
+    "express-generator": "^4.16.1",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
   }
