--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/descara/webparty/issues"
   },
-  "homepage": "https://github.com/descara/webparty#readme"
+  "homepage": "https://github.com/descara/webparty#readme",
+  "devDependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "socket.io": "^2.3.0"
+  }
 }
